--- a/index.html
+++ b/index.html
@@ -1,3 +1,15 @@
+<!--
+    pou rle debut:
+    git clone https://github.com/Maxime-Labbe/Convertisseur
+
+    pour la fin:
+    git add . 
+    *
+    git commit -m"hop la"
+    *
+    git push
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
@@ -14,7 +26,7 @@
 
 
 
-    <p>louissss + maxime</p>
+    <p>louis</p>
 
     <div class="aligneRow">
         <div class="aligneCollun">
@@ -81,7 +93,7 @@
         </div>
         <div class="item"></div>
         <div class="item2"></div>
-        <p>coucouaa</p>
+        <p>coucou</p>
     </div>
 </body>
 
