--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
 
     <div class="header">
-        <div class="colorMode white"></div>
+        <div class="colorMode day"></div>
         <div class="menu dayText">
             <div class="homeIcon"></div>
             <h2 class="headerItem" id="Convertisseur">Converter</h2>
@@ -51,7 +51,7 @@
 
                 <input class="value" type="number" id="valeurInput_1" required />
             </div>
-
+            <div class="swap"></div>
             <div class="alignColumn">
                 <select class="selector" id="selecteur_2">
                     <option value="" disabled selected>Please select a unit</option>
