--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 
 <script src="script.js" async></script>
 
-<body>
+<body class="day">
 
     <div class="header">
         <div class="colorMode day"></div>
@@ -99,6 +99,10 @@
                 <button id="buttonRemoveUnit">Delete unit</button>
             </div>
         </div>
+    </div>
+
+    <div class="footer">
+        <h4 class="footerText day">Made by Labbe Maxime & Verbrugge Louis © 2023-2024</h4>
     </div>
 </body>
 
