--- a/index.html
+++ b/index.html
@@ -104,6 +104,13 @@
     <div class="footer">
         <h4 class="footerText day">Made by Labbe Maxime & Verbrugge Louis © 2023-2024</h4>
     </div>
+
+    <div class="historique day">
+        <p class="dayText hidden">Historique</p>
+        <ul class="historique hidden">
+
+        </ul>
+    </div>
 </body>
 
 </html>
