--- a/index.html
+++ b/index.html
@@ -41,31 +41,12 @@
         <div class="alignRow">
             <div class="alignColumn">
                 <select class="selector" id="selecteur_1">
-                    <!--<option value="" disabled selected>Please select a unit</option>
-                    <option value="1">Meter</option>
-                    <option value="1000">Kilometer</option>
-                    <option value="0.01">Centimeter</option>
-                    <option value="330">Effeil Tower</option>
-                    <option value="1.756">Man</option>
-                    <option value="0.1467">Smartphone</option>
-                    <option value="56">Ariane 5</option>
-                    <option value="1970">Golden Gate</option>-->
                 </select>
-
                 <input class="value" type="number" id="valeurInput_1" required />
             </div>
             <div class="swap"></div>
             <div class="alignColumn">
                 <select class="selector" id="selecteur_2">
-                    <!--<option value="" disabled selected>Please select a unit</option>
-                    <option value="1">Meter</option>
-                    <option value="1000">Kilometer</option>
-                    <option value="0.01">Centimeter</option>
-                    <option value="330">Effeil Tower</option>
-                    <option value="1.756">Man</option>
-                    <option value="0.1467">Smartphone</option>
-                    <option value="56">Ariane 5</option>
-                    <option value="1970">Golden Gate</option>-->
                 </select>
 
                 <input class="value" type="number" id="valeurInput_2" />
@@ -108,8 +89,8 @@
         <h4 class="footerText day">Made by Labbe Maxime & Verbrugge Louis © 2023-2024</h4>
     </div>
 
-    <div class="historique">
-        <p class="hidden">Historique</p>
+    <div class="historique dayText">
+        <p>Historique</p>
         <ul class="historique hidden">
         </ul>
     </div>
