--- a/index.html
+++ b/index.html
@@ -1,15 +1,3 @@
-<!--
-    pou rle debut:
-    git clone https://github.com/Maxime-Labbe/Convertisseur
-
-    pour la fin:
-    git add . 
-    *
-    git commit -m"hop la"
-    *
-    git push
--->
-
 <!DOCTYPE html>
 <html lang="en">
 
@@ -54,6 +42,11 @@
         </div>
         <p class="result">
         </p>
+        <div class="result">
+            <div class="imageResult"></div>
+            <p>=</p>
+            <div class="imageResult"></div>
+        </div>
     </div>
 
 
@@ -86,7 +79,7 @@
     </div>
 
     <div class="footer">
-        <h4 class="footerText day">Made by Labbe Maxime & Verbrugge Louis © 2023-2024</h4>
+        <h4 class="footerText day">Made by Maxime Labbe & Louis Verbrugge © 2023-2024</h4>
     </div>
 
     <div class="historique dayText">
